# templyte

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/pr_templates/: documentation.md  issue.md
.github/workflows/: ci.yml  coverage.yml
docs/: README.md  ca_and_pre_commit.md  conf.py  index.rst  py_versioning.md  repo_layout.md  setup.md  testing.md
docs/sphinx/: license.rst  source_reference.rst
gitlint/: .gitlint  user-rules.py
src/cli/: __init__.py  console.py  wikipedia.py
tests/: __init__.py
tests/cli/: conftest.py  test_console.py  test_wikipedia.py
