[tool.poetry]
name = "cli"
version = "0.1.0"
description = "CLI package for Python's Boilerplate Project"
authors = ["Juan Manso <juanmanso@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://github.com/juanmanso/templyte"
repository = "https://github.com/juanmanso/templyte"
keywords = ["template", "python", "templyte"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cli = "cli.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
