[tool.poetry]
name = "cli"
version = "0.1.0"
description = "CLI package for Python's Boilerplate Project"
authors = ["Juan Manso <juanmanso@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://github.com/juanmanso/templyte"
repository = "https://github.com/juanmanso/templyte"
keywords = ["template", "python", "templyte"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage = "^5.4"
pytest-mock = "^3.5.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"

[tool.poetry.scripts]
cli = "cli.console:main"

[tool.pytest.ini_options]
addopts = "-rA --cov -m 'not e2e'"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cli"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
