[tool.poetry]
name = "cli"
version = "0.1.0"
description = "CLI package for Python's Boilerplate Project"
authors = ["Juan Manso <juanmanso@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
documentation = "https://templyte.readthedocs.io"
homepage = "https://github.com/juanmanso/templyte"
repository = "https://github.com/juanmanso/templyte"
keywords = ["template", "python", "templyte"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"
desert = "^2020.11.18"
marshmallow = "^3.10.0"
importlib-metadata = {version = "^3.7.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-mock = "^3.5.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
nox = "^2020.12.31"
gitlint = "^0.15.0"
mypy = "^0.812"
pytype = {version = "^2021.2.23", python = "3.7"}
typeguard = "^2.11.1"
flake8-annotations = "^2.5.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.7.0"
xdoctest = "^0.15.4"
pygments = "^2.8.0"
sphinx = "^3.5.1"
sphinx-autodoc-typehints = "^1.11.1"
recommonmark = "^0.7.1"
codecov = "^2.1.11"

[tool.poetry.scripts]
cli = "cli.console:main"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "recommonmark"]

[tool.pytest.ini_options]
addopts = "-rA --cov -m 'not e2e'"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cli"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
